<resources>
    <string name="app_name">RealmDBLoginAssign</string>

    <string name="login_page">Welcome, Login to continue</string>
    <string name="Login">Login</string>
    <string name="User_Name">User Name :</string>
    <string name="Password">Password :</string>
    <string name="userName">Enter User Name</string>
    <string name="pswd">Enter Password</string>
    <string name="not_registered">Not Registered Yet, Sign Up !</string>

    <string name="signup_page">Welcome, Signup to continue</string>
    <string name="confirm_pswd">Confirm Password :</string>
    <string name="confirmpswd">Re-Enter Password</string>
    <string name="signup">Signup</string>

    <string name="data">Get Data</string>
    <string name="fetchdata">fetch_data</string>
</resources>