<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="item"
            type="com.example.realmdbloginassign.MainActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@color/yellow">

        <TextView
            android:id="@+id/tvLoginPage"
            android:layout_width="229dp"
            android:layout_height="70dp"
            android:text="@string/login_page"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.091" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="341dp"
            android:layout_height="460dp"
            android:background="@drawable/button_design"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLoginPage">

            <EditText
                android:id="@+id/etUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="29dp"
                android:ems="10"
                android:hint="@string/userName"
                android:inputType="text"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/tvUserName"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="68dp"
                android:layout_marginBottom="96dp"
                android:ems="10"
                android:hint="@string/pswd"
                android:inputType="text"
                android:password="true"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/btnLogin"
                app:layout_constraintStart_toStartOf="@+id/etUserName"
                app:layout_constraintTop_toBottomOf="@+id/etUserName" />

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/User_Name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/etUserName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/etUserName" />

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Password"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/etPassword"
                app:layout_constraintStart_toStartOf="@+id/tvUserName"
                app:layout_constraintTop_toTopOf="@+id/etPassword"
                app:layout_constraintVertical_bias="0.461" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="289dp"
                android:layout_height="53dp"
                android:layout_marginTop="96dp"
                android:background="@drawable/button_design"
                android:onClick="login"
                android:text="@string/Login"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPassword" />

            <TextView
                android:id="@+id/createAcc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:clickable="true"
                android:text="@string/not_registered"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/btnLogin"
                app:layout_constraintHorizontal_bias="0.514"
                app:layout_constraintStart_toStartOf="@+id/btnLogin"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>