<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="item"
            type="com.example.realmdbloginassign.SignUp" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUp"
        android:background="@color/yellow"
        >

        <TextView
            android:id="@+id/tvSignupPage"
            android:layout_width="231dp"
            android:layout_height="70dp"
            android:layout_marginTop="84dp"
            android:text="@string/signup_page"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="371dp"
            android:layout_height="452dp"
            android:layout_marginTop="65dp"
            android:layout_marginBottom="128dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSignupPage"
            android:background="@drawable/button_design">

            <EditText
                android:id="@+id/etUserSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:hint="@string/userName"
                android:inputType="text"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/tvUserSignup"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etPasswordSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="43dp"
                android:ems="10"
                android:hint="@string/pswd"
                android:inputType="text"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/tvPasswordSignup"
                app:layout_constraintTop_toBottomOf="@+id/etUserSignup" />

            <TextView
                android:id="@+id/tvUserSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginTop="20dp"
                android:text="@string/User_Name"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/etUserSignup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/etUserSignup" />

            <TextView
                android:id="@+id/tvPasswordSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Password"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/etPasswordSignup"
                app:layout_constraintStart_toStartOf="@+id/tvUserSignup"
                app:layout_constraintTop_toTopOf="@+id/etPasswordSignup" />

            <Button
                android:id="@+id/button2"
                android:layout_width="315dp"
                android:layout_height="49dp"
                android:layout_marginTop="105dp"
                android:background="@drawable/button_design"
                android:onClick="signup"
                android:text="@string/signup"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/Success"
                app:layout_constraintStart_toStartOf="@+id/Success"
                app:layout_constraintTop_toBottomOf="@+id/etPasswordSignup" />

            <TextView
                android:id="@+id/Success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="62dp"
                android:clickable="true"
                android:text="If Already Signup...Login Now"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>